# Loan_apporval-agent

./: .gitignore  Dockerfile  README.md  api.py  evals.py  extracted.txt  loan_agent.py  loans.db  pyproject.toml  setup_db.py
